--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,12 +1,18 @@
 <resources>
     <string name="app_name">DAM2-Erronka1-Talde2</string>
+
+    <!-- MainActivity -->
     <string name="createdBy">Sortuta:</string>
+
+    <!-- login -->
     <string name="user">Erabiltzailea:</string>
     <string name="userTxt">adibidea@adibide.eus</string>
     <string name="pasw">Pasahitza:</string>
     <string name="paswTxt">Sartu zure pasahitza</string>
     <string name="btnLogin">Sartu</string>
     <string name="btnRegister">Erregistratu</string>
+
+    <!-- register -->
     <string name="regIzena">Izena:</string>
     <string name="regEditIzena">Sartu zure izena</string>
     <string name="regNan">NAN:</string>
@@ -24,4 +30,24 @@
     <string name="regErabMota">Erabiltzaile mota:</string>
     <string name="regErabiltzaile1">Pertsona</string>
     <string name="regErabiltzaile2">Enpresa/Entitatea</string>
+
+    <!-- register.java -->
+    <string name="erIzena">Izena bete behar da</string>
+    <string name="erNan">Nan formatua okerra</string>
+    <string name="erAbizenak">Zure lehen bi abizenak sartu, mesedez</string>
+    <string name="erEmail">Email okerra</string>
+    <string name="erMugikorra">Mugikor zenbaki okerra</string>
+    <string name="erPasahitza1">Pasahitza bete mesedez</string>
+    <string name="erPasahitza2">Pasahitzak ez dira berdinak</string>
+    <string name="erMotak">Aukeratu erabiltzale mota bat</string>
+    <string name="erabiltzaileaSortu">Zure erabiltzailea sortu da</string>
+    <string name="erOkerra">Erregistro okerra: </string>
+    <string name="erNanBikoiztua">Beste erabiltzaile bat dago NAN berarekin.</string>
+    <string name="erPasahitzFormatua">Pasahitzak ez dago behar bezalako formatua (gutxienez 6 karaktere)</string>
+    <string name="erEpostaErregistratuta">E-posta dagoeneko erregistratua dago</string>
+    <string name="erInternet">Ez dago Internet konexiorik. Saiatu berriro geroago</string>
+    <string name="erEzezaguna">Errore ezezaguna: </string>
+    <string name="erDbNan">Ezin izan da NAN-a datu basean konprobatu. Saiatu berriro geroago</string>
+    <string name="dbGorde">Datu basean gorde da</string>
+    <string name="erErrorea">Errorea</string>
 </resources>
