--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -66,6 +66,7 @@
     <string name="menKontua">Nire Kontua</string>
     <string name="menErreserbak">Erreserbak</string>
     <string name="menLogoDeskripzioa">Gure app logoa</string>
+    <string name="menPribatutasunPolitikak">Pribatutasun Politikak</string>
 
     <!-- Nire Kontua -->
     <string name="nrkntEditErbltzMota">USER mota</string>
