--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -71,7 +71,7 @@
     <string name="menPribatutasunPolitikak">Pribatutasun Politikak</string>
     <string name="ezagutu">Ezagutu gaitzazu:</string>
     <string name="ezabatu">Ezabatu erabiltzailea</string>
-    <string name="editatu">Aldatu izena</string>
+    <string name="editatu">Aldatu datuak</string>
 
     <!-- Nire Kontua -->
     <string name="nrkntEditErbltzMota">USER mota</string>
